<resources>
    <string name="app_name">TrackYourTime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_username">Name Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="back">Back</string>
    <string name="account_details">Account details</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="select_date_and_time">Please select date and time!</string>
    <string name="count_title">What is the significance of that day?</string>
    <string name="your_notes">Your notes</string>
    <string name="show">Show</string>
    <string name="old_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Repeat new password</string>
    <string name="profile">Profile</string>
    <string name="my_count">My counters</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="password_operations">Password operations</string>
    <string name="log_out">Log out</string>
    <string name="update_info">Please enter your information to complete the update</string>
    <string name="confirm">Confirm</string>
    <string name="log_out_info">You are about to log out, are you sure?</string>
    <string name="go_back">Go back</string>
    <string name="image_upload">Uploading image</string>
    <string name="countdown">Countdown</string>
    <string name="completed_countdown">Completed countdown</string>
    <string name="complete">Completed</string>
    <string name="one_hundred_percent_completed">100% completed!</string>
    <string name="time_is_up">Time is up!</string>
    <string name="create_countdown">Create countdown</string>
    <string name="alert_title">Attention!</string>
    <string name="alert_message">You are about to log out, are you sure?</string>
    <string name="logout">Log out</string>
    <string name="no_countdown">no countdown has been created yet</string>

</resources>