<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_fragment"
    tools:context=".ui.fragment.PasswordOperationsFragment">

    <LinearLayout
        android:id="@+id/linearLayoutPasswordOperationsToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Toolbar
            style="@style/ToolBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvBack"
                style="@style/ToolBarAlternativeTitleStyle"
                android:layout_gravity="start"
                android:text="@string/back"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tool_bar_title"
                style="@style/ToolBarTitleStyle"
                android:text="Şifre işlemleri" />
        </Toolbar>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyPasswordOperations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPasswordOperationsToolBar">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <EditText
                android:id="@+id/etOldPassword"
                style="@style/EditTextStyle"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:paddingEnd="60dp" /> <!-- Padding ekledik ki textView ile çakışmasın -->

            <TextView
                android:id="@+id/tvOldPasswordShow"
                style="@style/TVPasswordShowStyle"
                android:text="@string/show" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <EditText
                android:id="@+id/etNewPassowrd"
                style="@style/EditTextStyle"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:paddingEnd="60dp" />

            <TextView
                android:id="@+id/tvNewPasswordShow"
                style="@style/TVPasswordShowStyle"
                android:padding="15dp"
                android:text="@string/show"  />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <EditText
                android:id="@+id/etNewPasswordAgain"
                style="@style/EditTextStyle"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:paddingEnd="60dp" />

            <TextView
                android:id="@+id/tvNewPasswordAgainShow"
                style="@style/TVPasswordShowStyle"
                android:text="@string/show"  />
        </FrameLayout>


        <Button
            android:id="@+id/registerButton"
            style="@style/RegisterButtonStyle"
            android:layout_marginTop="100dp"
            android:text="@string/save"
            android:textAllCaps="false" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>